--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -115,8 +115,9 @@ a:hover{
 }
 
 header{
-	height:15%;
+	height:20%;
 	width: 100%;
+	padding: 0.5em;
 	position:relative;
 	background-color:#1a345d;
 }
@@ -130,16 +131,8 @@ header{
 #bottomContainer{
 	height: auto;
 	width:100%;
-	background-color:#fff;
-	/* padding: 3%; */
-}
-
-#mainContent{
-	width: 90%;
-	height: auto;
-	/* padding:2em 1em; */
-	margin:0 auto;
-	position: relative;
+	background-color:blanchedalmond;
+	padding: 3%;
 }
 
 footer{
