--- a/assets/dm_theme/css/main.css
+++ b/assets/dm_theme/css/main.css
@@ -18,7 +18,7 @@ html, body{
 body{
 	margin:0;
 	padding:0;
-	color:#fff;
+	color:#000;
 	font-family: 'Montserrat', sans-serif;
 	background-color:#fff;
 	letter-spacing: 1px;
@@ -28,7 +28,7 @@ body{
 	FONT
 =======================*/
 
-h1{
+/* h1{
 	font-size:2em;
 	font-family: 'Zen Dots', cursive;
 }
@@ -46,7 +46,7 @@ h3{
 h4{
 	font-size:1.6em;
 	font-family: 'Zen Dots', cursive;
-}
+} */
 
 span{
 	font-size: 1.1em;
@@ -104,14 +104,15 @@ a:hover{
 	max-width: 1400px;
 	height: 100%;
 	margin:0 auto;
+	background-color:#e2f9ff;
+
 }
 
 #topContainer{
 	width: 100%;
-	height: 50%;
-	background-color: #006aff;
-	background-size: cover;
-	background-position: center;
+	height: 40%;
+	background: rgb(103,170,219);
+	background: linear-gradient(90deg, rgba(103,170,219,1) 0%, rgba(22,84,255,1) 25%, rgba(0,2,122,1) 50%, rgba(22,84,255,1) 75%, rgba(103,170,219,1) 100%);
 }
 
 header{
@@ -126,19 +127,43 @@ header{
 	height: 85%;
 	width: 100%;
 	position: relative;
+	background-image: url("assets/dm_theme/img/visual.jpg");
 }
 
 #bottomContainer{
 	height: auto;
 	width:100%;
-	background-color:blanchedalmond;
-	padding: 3%;
+	padding: 1%;
+}
+
+#adminBar{
+	height:1.5em;
+	width:100%;
+	background-color:#008db1;
+	position:fixed;
+	top:0;
+	z-index:1000;
+	padding: 0 3em;
+	text-align: right;
+}
+
+#adminBar a{
+	color:#fff;
+}
+
+#adminBar a:visited{
+	color:#fff;
+}
+
+#adminBar a:hover{
+	color:#e2f9ff;
 }
 
 footer{
 	width: 100%;
 	height: 100px;
 	background-color:#044DB4;
+	color:#fff;
 	padding:2em;
 	text-align: center;
 	clear: both;
@@ -169,11 +194,40 @@ footer img{
 	MODULI
 ========================*/
 
-.box{
+#block1{
 	width:100%;
+	margin: 1% auto;
 	height: auto;
 	float: left;
 	padding:3%;
+	border-radius: 0.5em;
+}
+
+#block2{
+	width:100%;
+	margin: 1% auto;
+	height: auto;
+	float: left;
+	padding:3%;
+	border-radius: 0.5em;
+}
+
+#block3{
+	width:49%;
+	margin: 1% 1% 1% 0;
+	height: auto;
+	float: left;
+	padding:3%;
+	border-radius: 0.5em;
+}
+
+#block4{
+	width:49%;
+	margin: 1% 0 1% 1%;
+	height: auto;
+	float: left;
+	padding:3%;
+	border-radius: 0.5em;
 }
 
 .box.pianeti{
@@ -312,6 +366,21 @@ img{
 #visual .box3{
 	margin: 1%;
 }
+
+/*===========================
+	BLOG
+===========================*/
+
+p.metainfo{
+	font-size:0.8em;
+	margin: 0.3em;
+}
+
+.blog_content{
+	margin: 2em 1em;
+}
+
+
 
 /*===========================
 	HOME
