--- a/assets/damares/css/custom.css
+++ b/assets/damares/css/custom.css
@@ -62,6 +62,13 @@ p.metainfo{
 	font-size:1.5em;
 }
 
+h1, h2, h3, h4, h5, h6{
+    font-family: 'Baloo Tammudu 2', cursive;
+}
+
+#sidebar_menu h2 strong{
+	color:#fff;
+}
 
   .border-top { border-top: 1px solid #e5e5e5; }
   .border-bottom { border-bottom: 1px solid #e5e5e5; }
@@ -73,6 +80,19 @@ p.metainfo{
 /*=============================
 	MEDIA QUERIES
 =============================*/
+
+@media (max-width:980px){
+
+	#sidebar{
+        display: none;
+    }
+
+	#blog{
+		width:100%;
+	}
+
+
+}
 
 @media (max-width:767px){
 
