--- a/assets/damares/css/main.css
+++ b/assets/damares/css/main.css
@@ -171,6 +171,11 @@ input, select, textarea {
 	float: left;
 }
 
+.block img{
+	width:100%;
+	height:100%;
+	object-fit: scale-down;
+}
 
 /*=============================
 BLOG LAYOUT
