--- a/assets/damares/css/main.css
+++ b/assets/damares/css/main.css
@@ -287,7 +287,7 @@ BLOG LAYOUT
 		}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #444;
+		/* color: #444; */
 		font-weight: 800;
 	}
 
@@ -310,7 +310,7 @@ BLOG LAYOUT
 
 	b, strong {
 		font-weight: 600;
-		color: #444;
+		/* color: #444; */
 	}
 
 	i, em {
