--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -12,11 +12,58 @@ body{
 
 .logo img{
     object-fit: contain;
-    height: 50%;
-    width:50%;
+    height: 40%;
+    width:40%;
     
 }
 
 .navbar{
     background-color: #bdeeff;
+}
+
+.form-horizontal .control-label{
+    float:left;
+    width:160px;
+    padding-top:0;
+    text-align:left
+}
+
+.form-horizontal label{
+    float:left;
+    width:160px;
+    padding-top:0;
+    text-align:left
+}
+
+.form-horizontal .controls{
+    margin-left:0
+}
+
+.form-horizontal .control-list{
+    padding-top:0
+}
+
+.form-horizontal .form-actions{
+    padding-right:10px;
+    padding-left:10px
+}
+
+.form-horizontal input{
+    border:#008db1 1px solid;
+    color: #707288;
+    margin: 0 0 1em 0;
+    border-radius: 4px;
+}
+
+.form-horizontal select{
+    border:#008db1 1px solid;
+    color: #707288;
+    margin: 0 0 1em 0;
+    border-radius: 4px;
+    background-color: #fff;;
+}
+
+.form-horizontal .btn{
+    background-color: #008db1;
+    color:#fff;
 }
