--- a/demo/login/css/my-login.css
+++ b/demo/login/css/my-login.css
@@ -9,9 +9,9 @@ body.my-login-page {
 
 .my-login-page .brand {
 	width: 90px;
-	height: 90px;
+	height: 70px;
 	overflow: hidden;
-	border-radius: 50%;
+	/* border-radius: 50%; */
 	margin: 40px auto;
 	box-shadow: 0 4px 8px rgba(0,0,0,.05);
 	position: relative;
