--- a/demo/assets/damares/css/custom.css
+++ b/demo/assets/damares/css/custom.css
@@ -5,7 +5,6 @@
 
 #banner{
 	overflow: hidden; 
-    background-image: url(../img/visual.jpg);
     background-size: cover;
 	background-position: center;
 	color:#fff;
@@ -46,6 +45,14 @@ h1, h2, h3, h4, h5, h6{
   .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
   
   .lh-condensed { line-height: 1.25; }
+
+  form label {
+    display: block;
+    font-weight: 400;
+    margin: 0 0 1em 0;
+    font-size: 1em;
+    color: #444;
+}
 /*=============================
 	MEDIA QUERIES
 =============================*/
