--- a/assets/damares/css/custom.css
+++ b/assets/damares/css/custom.css
@@ -38,6 +38,11 @@ h1, h2, h3, h4, h5, h6{
 	color:#fff;
 }
 
+.card.login{
+	width:50% !important;
+	border:none;
+}
+
   .border-top { border-top: 1px solid #e5e5e5; }
   .border-bottom { border-bottom: 1px solid #e5e5e5; }
   .border-top-gray { border-top-color: #adb5bd; }
@@ -88,5 +93,17 @@ h1, h2, h3, h4, h5, h6{
 	    margin: 1% auto;
     }
 
+	.card.login{
+		width:75% !important;
+	}
+
+}
+
+@media (max-width:400px){
+
+
+	.card.login{
+		width:90% !important;
+	}
 
 }
