--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -67,3 +67,11 @@ body{
     background-color: #008db1;
     color:#fff;
 }
+
+.guide{
+    background-color: #f8f9fc;
+    color:#000;
+    margin: 1px 3px;
+    padding:2em;
+    line-height: 1.5em;
+}
