--- a/demo/assets/damares/css/my-login.css
+++ b/demo/assets/damares/css/my-login.css
@@ -8,8 +8,8 @@ body.my-login-page {
 }
 
 .my-login-page .brand {
-	width: 90px;
-	height: 70px;
+	width: 150px;
+	/* height: 70px; */
 	overflow: hidden;
 	/* border-radius: 50%; */
 	margin: 40px auto;
