--- a/assets/damares/css/custom.css
+++ b/assets/damares/css/custom.css
@@ -55,6 +55,16 @@ img.gallery{
 	max-width:100%;
 }
 
+.img_blog{
+	padding: 1em;
+}
+
+.img_blog img{
+	width:100%;
+	height:100%;
+	object-fit: contain;	
+}
+
 .button{
 	font-size:1em;
 }
