new logo and minor fix

--- a/admin/assets/css/custom.css
+++ b/admin/assets/css/custom.css
@@ -12,9 +12,13 @@ body{
 
 .logo img{
     object-fit: contain;
-    height: 30%;
-    width:30%;
+    height: 35%;
+    width:35%;
     
+}
+
+.logo{
+    padding: 1%;;
 }
 
 .navbar{
