--- a/assets/mcc/css/custom.css
+++ b/assets/mcc/css/custom.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Montserrat', sans-serif;
+    background-color: rgba(183, 255, 171,0.3);
 }
 
 #header{
@@ -21,7 +22,7 @@ a{
     height:120px;
 }
 
-#logo h2{
+#logo h3{
     margin-bottom: 0;;
 }
 
@@ -44,6 +45,10 @@ a{
     box-shadow:none;
 }
 
+.dropotron.level-0 {
+    border-radius:5px;
+}
+
 .dropotron > li > a{
     color:#fff;
     font-weight: bold;
@@ -55,6 +60,10 @@ a{
     /* margin-bottom: 1.5em; */
     font-weight: bold;
     color:#fff;
+}
+
+#nav > ul{
+    padding-left: 0;
 }
 
 #bottomContainer{
