fixed index template

--- a/assets/mcc/css/custom.css
+++ b/assets/mcc/css/custom.css
@@ -76,3 +76,9 @@ footer{
     margin: 0 auto 2em;
     text-align: center;
 }
+
+/*/////////////////////////////////////////*/
+
+.block4.index{
+    padding:0;
+}
