--- a/admin/template/inc/css/layout.css
+++ b/admin/template/inc/css/layout.css
@@ -14,5 +14,38 @@
     margin:1em;
     padding:1em;
     border-radius:5px;
-    background-color: #fff;
+}
+
+#side_blog{
+    margin:1em;
+    padding:1em;
+    border-radius:5px;
+}
+
+.copyright{
+	text-align: center;
+}
+
+p.metainfo{
+    margin-left:1em;
+    font-size:0.8em;
+	margin-bottom:0;
+}
+
+#blog h1{
+	font-size:1.5em;
+}
+
+.img_blog{
+	padding: 1em;
+}
+
+.img_blog img{
+	width:100%;
+	height:100%;
+	object-fit: contain;	
+}
+
+.blog_content img{
+    text-align: center;
 }
