--- a/assets/colors/Green.css
+++ b/assets/colors/Green.css
@@ -40,3 +40,11 @@ body{
 #nav > ul > li a{
     color:#fff;
 }
+
+#titleBar{
+    background-color: #00aa78;
+}
+
+#navPanel{
+    background-color: #00aa78;
+}
