--- a/assets/mcc/css/custom.css
+++ b/assets/mcc/css/custom.css
@@ -2,6 +2,14 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+p{
+    margin: 0 0 1em 0;
+}
+
+.clearfix{
+    clear: both;
+}
+
 #header{
     background-color: transparent;
     background-image: none;
@@ -94,12 +102,25 @@ span.title h3{
     margin:0 auto;
 }
 
-footer{
-    width: 80%;
-    margin: 0 auto 2em;
-    text-align: center;
+.blog_content{
+    margin-bottom:2.5em;
+    border-bottom: 2px dotted #ccc ;
 }
 
+footer{
+    width: 80%;
+    margin: 1em auto;
+    text-align: center;
+    padding: 0;
+}
+
+footer p{
+    margin:0 !important;
+}
+
+#googlemaps iframe{
+    width:100% !important;
+}
 
 /*/////////////////////////////////////////*/
 
@@ -111,25 +132,57 @@ footer{
     height: 100%;
 }
 
-#googlemaps iframe{
-    width:100% !important;
+ .blog.index{
+    padding:0.5em;
+    width:auto;
+    border-radius: 5px;
+    /* margin-top: -30px; */
+}
+
+.blog.index img{
+    width:90%;
+	height:100%;
+	object-fit:cover;	
+    vertical-align: middle;
+}
+
+.img_blog{
+    padding:0;
 }
 
 /* MEDIA QUERIES */
 
 @media (max-width: 960px) {
+
+    .img_blog{
+        padding:1em;
+        margin: 0 auto;
+        text-align: center;
+    }
+.blog.index{  
+    width:92%;
+    padding: 0;
+    margin:0 auto;
+}
+
     .block2.index, .block3.index, .block4.index{
         width:90%;
         margin: 1em auto;
     }
 
     .block4.index{
-        padding-left: 1.5em;
+        padding-left: 0.2em;
 
     }
 }
 
 @media (max-width: 576px) {
+
+    .blog.index{  
+        width:95%;
+        margin:1em auto;
+    }
+
     .block2.index, .block3.index, .block4.index{
         width:95%;
         margin: 1em auto;
