--- a/assets/mcc/css/custom.css
+++ b/assets/mcc/css/custom.css
@@ -108,10 +108,15 @@ span.title h3{
 }
 
 footer{
-    width: 80%;
+    border-top: 1px solid #ccc;
+    width: 100%;
     margin: 1em auto;
     text-align: center;
     padding: 0;
+}
+#copyright{
+    padding-top:1em;
+    font-size:0.8em;
 }
 
 footer p{
@@ -123,6 +128,10 @@ footer p{
 }
 
 /*/////////////////////////////////////////*/
+
+.block1.index p{
+    text-align: justify;
+}
 
 .block4.index{
     padding:0;
