--- a/assets/colors/Light_Blue.css
+++ b/assets/colors/Light_Blue.css
@@ -1,14 +1,14 @@
 body{
-    background-color: rgba(12, 9, 100,0.3);
+    background-color: rgba(0, 143, 174,0.3);
 }
 
 #side_page{
-    background-color: #14107B;
+    background-color: #006e88;
     color:#fff;
 }
 
 #side_blog{
-    background-color: #0C0964;
+    background-color: #008db1;
     color:#fff;
 }
 
@@ -26,11 +26,11 @@ body{
 }
 
 #nav{
-    background-color: #0C0964;
+    background-color: #008db1;
 }
 
 .dropotron{
-    background-color: #0C0964;
+    background-color: #008db1;
 }
 
 .dropotron > li > a{
@@ -42,15 +42,15 @@ body{
 }
 
 #titleBar{
-    background-color: #0C0964;
+    background-color: #008db1;
 }
 
 #navPanel{
-    background-color: #0C0964;
+    background-color: #008db1;
 }
 
 .blog.index{
-    background-color: #211C94;
+    background-color: #07cdfb;
     color:#fff;
 }
 
@@ -70,11 +70,11 @@ body{
 }
 
 .block2.index{
-    background-color: #14107B;
+    background-color: #006e88;
     color:#fff;
 }
 
 .block3.index{
-    background-color: #0C0964;
+    background-color: #008db1;
     color:#fff;
 }
