moved css classes from single css to layout.css and added class on master template

--- a/admin/template/inc/css/layout.css
+++ b/admin/template/inc/css/layout.css
@@ -6,3 +6,105 @@
     clear:both;
     height:auto;
 }
+/******** DEFAULT  ***********/
+
+
+.block1.default{
+    width:100%;
+	margin: 1% auto;
+}
+
+
+.block2.default{
+    width:49%;
+	margin: 1% 1% 1% 0;
+}
+
+.block3.default{
+    width:49%;
+	margin: 1% 0 1% 1%;
+}
+
+.block4.default{
+    width:32%;
+	margin: 1% 1% 1% 0;
+}
+
+.block5.default{
+    width:32%;
+	margin: 1%;
+}
+
+.block6.default{
+    width:32%;
+	margin: 1% 0 1% 1%;
+}
+
+
+/******** VARIANT1  ***********/
+
+
+.block1.variant1{
+    width:100%;
+	margin: 1% auto;
+}
+
+
+.block2.variant1{
+    width:32%;
+	margin: 1% 1% 1% 0;
+}
+
+.block3.variant1{
+    width:32%;
+	margin: 1%;
+}
+
+.block4.variant1{
+    width:32%;
+	margin: 1% 0 1% 1%;
+}
+
+.block5.variant1{
+    width:49%;
+	margin: 1% 1% 1% 0;
+}
+
+.block6.variant1{
+    width:49%;
+	margin: 1% 0 1% 1%;
+}
+
+
+/******** VARIANT2  ***********/
+
+
+.block1.variant2{
+	width:49%;
+	margin: 1% 1% 1% 0;
+}
+
+.block2.variant2{
+	width:49%;
+	margin: 1% 0 1% 1%;
+}
+
+.block3.variant2{
+	width:100%;
+	margin: 1% auto;
+}
+
+.block4.variant2{
+	width:32%;
+	margin: 1% 1% 1% 0;
+}
+
+.block5.variant2{
+	width:32%;
+	margin: 1%;
+}
+
+.block6.variant2{
+	width:32%;
+	margin: 1% 0 1% 1%;
+}
