--- a/assets/damares-one/css/custom.css
+++ b/assets/damares-one/css/custom.css
@@ -1,3 +1,127 @@
+body{
+	padding-top:0;
+}
+
+#adminBar{
+    height:2em;
+	width:100%;
+	background-color:#008db1;
+	position:fixed;
+	top:0;
+	z-index:1000;
+	padding: 0em 3em;
+	text-align: right;
+}
+
+#adminBar a{
+    color:#fff;
+}
+
+#adminBar a:visited{
+    color:#fff;
+}
+
+#adminBar a:hover{
+    color:#e2f9ff;
+}
+
+.block{
+    border-radius:0.5em;
+    padding:2%;
+    height: auto;
+	float: left;
+}
+
+.block img{
+	width:100%;
+	height:100%;
+	object-fit: scale-down;
+}
+
+#nav > ul:before, #nav > ul:after {
+	border:0;
+}
+
+#nav > ul{
+	border:0;
+	color:#444;
+}
+
+#nav{
+	padding:1em;
+}
+
+#logo{
+	display: inline-block;
+  	height: 100%;
+  	width: 20%;
+  	padding: 0 1%;
+	float: left;
+}
+
+#logo img{
+	height:100px;
+}
+
+#nav{
+	position: absolute;
+	text-align: right;
+    right: 0;
+    top: 0;
+    font-size: 1.2em;
+    font-family: 'Baloo Tammudu 2', cursive;
+}
+
+#header{
+	padding:0;
+}
+
+#header_text{
+	position:absolute;
+	top:40%;
+	left:20%;
+	width:100%;
+}
+
+#header_text h2, #header_text p{
+	text-align:center;
+}
+
+#topContainer{
+	padding-top:1em;
+}
+
+#bottomContainer{
+	position: absolute;
+	top:80%;
+	width: 100%;;
+}
+
+footer{
+	bottom:0;
+}
+
+#banner-wrapper{
+	z-index: -1;
+	position: absolute;
+	top:0;
+	width:100%;
+	margin:0;
+	padding: 0;
+	height:80%;
+}
+
+#banner{
+	height:100%;
+}
+
+.container{
+	width:100% !important;
+}
+
+#content{
+	padding:1em;
+}
 
 /*=============================
 	INDEX BLOCK PROPERTY
